[package]
name = "wasm_pi"
version = "0.1.0"
authors = ["Peter Volgyesi <peter.volgyesi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.65", features = [
    "CanvasRenderingContext2d",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
