[package]
name = "wasm_pi"
version = "0.1.0"
authors = ["Peter Volgyesi <peter.volgyesi@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fastrand = { version = "2.3.0", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.65", features = [
    "CanvasRenderingContext2d",
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
